--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>ruialexrib.github.io</title>
+    <title>Rui Ribeiro</title>
     <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicons/favicon-dark.svg" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Rui Ribeiro</span>
+            <span class="d-block d-lg-none">{ Rui Ribeiro }</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -39,24 +39,18 @@
         <!-- About-->
         <section class="resume-section" id="about">
             <div class="resume-section-content">
-                <h1 class="mb-0">
-                    Rui
-                    <span class="text-primary">Ribeiro</span>
-                </h1>
-                <div class="subheading mb-5">
-                    Porto · Portugal ·
-                    <a href="mailto:ruialexrib@gmail.com">ruialexrib@gmail.com</a>
-                </div>
+                <h2 class="mb-5"><i class="fas fa-info-circle"></i> About me</h2>
                 <p class="lead mb-5">
                     My name is Rui Ribeiro and Im a software developer that works with Microsoft technologies including ASP.NET Core / APIs / MVC / Winforms.<br />
                     Im prowd to work at Porto City Hall, as a member of the Information Systems Department, as a software developer and project manager.<br />
                     I am ambitious, self-motivated, resilient professional with more than 20 years of experience, with skills acquired in software development for the financial, accounting and management support areas.
                 </p>
-
+                <div class="subheading mb-3">Contacts</div>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/ruialexrib/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/ruialexrib"><i class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/ruialexribeiro"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon" href="mailto:ruialexrib@gmail.com"><i class="far fa-envelope-open"></i></a>
                 </div>
             </div>
         </section>
@@ -64,7 +58,7 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-5">Experience</h2>
+                <h2 class="mb-5"><i class="fab fa-creative-commons-nd"></i> Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Senior Organization and Management Technician</h3>
@@ -103,7 +97,7 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5">Education</h2>
+                <h2 class="mb-5"><i class="fas fa-user-graduate"></i> Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Porto Executive Academy</h3>
@@ -130,7 +124,7 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Skills</h2>
+                <h2 class="mb-5"><i class="fas fa-tools"></i> Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="fa-ul mb-0">
                     <li>
@@ -164,7 +158,7 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
+                <h2 class="mb-5"><i class="fas fa-bookmark"></i> Interests</h2>
                 <p>I have a personal and professional interest in computer programming, data science, business intelligence, machine learning, project management and information systems management in a business environment, and I invest in knowledge and personal fulfillment, through constant continuous improvement.</p>
                 <p class="mb-0">I seek to be an asset by combining my knowledge of computer programming with the skills acquired in the scope of business science, with the aim of promoting an integrated view of information systems with management, deepening and exploring the knowledge and technological tools that respond to the demands of the market and the expectations of the business world following the digital transformation we are experiencing.</p>
             </div>
@@ -173,22 +167,22 @@
         <!-- Awards-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
+                <h2 class="mb-5"><i class="fas fa-award"></i> Awards & Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         Best Postgraduate Student in Business Information Systems Management in 2019/2020
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         Best student at Porto Executive Academy in 2019/2020
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         Certificate of Pedagogical Competencies (Certificate No. F704861/2020)
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         M101075A Microsoft Sharepoint 2010, Application Development, Microsoft Corporation
                     </li>
                 </ul>
