--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-5"><i class="fab fa-creative-commons-nd"></i> Experience</h2>
+                <h2 class="mb-5"><i class="fab fa-creative-commons-nd"></i> Professional Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Senior Organization and Management Technician</h3>
@@ -97,7 +97,7 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5"><i class="fas fa-user-graduate"></i> Education</h2>
+                <h2 class="mb-5"><i class="fas fa-user-graduate"></i> Academic Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Porto Executive Academy</h3>
@@ -124,7 +124,7 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5"><i class="fas fa-tools"></i> Skills</h2>
+                <h2 class="mb-5"><i class="fas fa-tools"></i> Professional Skills and Tools</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="fa-ul mb-0">
                     <li>
@@ -158,7 +158,7 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5"><i class="fas fa-bookmark"></i> Interests</h2>
+                <h2 class="mb-5"><i class="fas fa-bookmark"></i> Personal Interests</h2>
                 <p>I have a personal and professional interest in computer programming, data science, business intelligence, machine learning, project management and information systems management in a business environment, and I invest in knowledge and personal fulfillment, through constant continuous improvement.</p>
                 <p class="mb-0">I seek to be an asset by combining my knowledge of computer programming with the skills acquired in the scope of business science, with the aim of promoting an integrated view of information systems with management, deepening and exploring the knowledge and technological tools that respond to the demands of the market and the expectations of the business world following the digital transformation we are experiencing.</p>
             </div>
