--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                     Im prowd to work at Porto City Hall, as a member of the Information Systems Department, as a software developer and project manager.<br />
                     I am ambitious, self-motivated, resilient professional with more than 20 years of experience, with skills acquired in software development for the financial, accounting and management support areas.
                 </p>
+                <div class="subheading mb-3">Motto</div>
+                <p class="lead mb-5"><i>"Talent is 1% inspiration and 99% perspiration."</i> - adaptation of Thomas Edison's thinking.</p>
                 <div class="subheading mb-3">Contacts</div>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/ruialexrib/"><i class="fab fa-linkedin-in"></i></a>
@@ -160,7 +162,8 @@
             <div class="resume-section-content">
                 <h2 class="mb-5"><i class="fas fa-bookmark"></i> Personal Interests</h2>
                 <p>I have a personal and professional interest in computer programming, data science, business intelligence, machine learning, project management and information systems management in a business environment, and I invest in knowledge and personal fulfillment, through constant continuous improvement.</p>
-                <p class="mb-0">I seek to be an asset by combining my knowledge of computer programming with the skills acquired in the scope of business science, with the aim of promoting an integrated view of information systems with management, deepening and exploring the knowledge and technological tools that respond to the demands of the market and the expectations of the business world following the digital transformation we are experiencing.</p>
+                <p>I seek to be an asset by combining my knowledge of computer programming with the skills acquired in the scope of business science, with the aim of promoting an integrated view of information systems with management, deepening and exploring the knowledge and technological tools that respond to the demands of the market and the expectations of the business world following the digital transformation we are experiencing.</p>
+                <p>I actively benefit and contribute to the open source community, consuming and making available source code, documentation, translations and technical articles, always with the aim of increasing synergies, networking and continuous personal and professional improvement.</p>
             </div>
         </section>
         <hr class="m-0" />
