--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#repos">Repositories</a></li>
             </ul>
         </div>
     </nav>
@@ -127,7 +128,7 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5"><i class="fas fa-tools"></i> Professional Skills and Tools</h2>
-                <div class="subheading mb-3">Programming Languages & Tools</div>
+                <div class="subheading mb-1">Programming Languages & Tools</div>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -149,9 +150,28 @@
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Tools: Visual Studio, Postman, Fiddler, SoapUI
                     </li>
+                </ul>
+                <div class="subheading mb-1 mt-1">Project Management</div>
+                <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Project management: PMBok, Kanban, Agile, Scrum, SixSigma
+                        PMBOK: The Project Management Body of Knowledge is a set of standard terminology and guidelines (a body of knowledge) for project management.
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Kanban: a scheduling system for lean manufacturing Taiichi Ohno, an industrial engineer at Toyota, developed kanban to improve manufacturing efficiency.
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Scrum: a framework for developing, delivering, and sustaining products in a complex environment.
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        TDD: Test-driven development is a software development process relying on software requirements being converted to test cases before software is fully developed, and tracking all software development by repeatedly testing the software against all test cases.
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        XP: Extreme Programming is an agile software development framework that aims to produce higher quality software, and higher quality of life for the development team.
                     </li>
                 </ul>
             </div>
@@ -163,7 +183,6 @@
                 <h2 class="mb-5"><i class="fas fa-bookmark"></i> Personal Interests</h2>
                 <p>I have a personal and professional interest in computer programming, data science, business intelligence, machine learning, project management and information systems management in a business environment, and I invest in knowledge and personal fulfillment, through constant continuous improvement.</p>
                 <p>I seek to be an asset by combining my knowledge of computer programming with the skills acquired in the scope of business science, with the aim of promoting an integrated view of information systems with management, deepening and exploring the knowledge and technological tools that respond to the demands of the market and the expectations of the business world following the digital transformation we are experiencing.</p>
-                <p>I actively benefit and contribute to the open source community, consuming and making available source code, documentation, translations and technical articles, always with the aim of increasing synergies, networking and continuous personal and professional improvement.</p>
             </div>
         </section>
         <hr class="m-0" />
@@ -171,26 +190,58 @@
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
                 <h2 class="mb-5"><i class="fas fa-award"></i> Awards & Certifications</h2>
+                <div class="subheading mb-3">Awards</div>
                 <ul class="fa-ul mb-0">
-                    <li>
+                    <li class="mb-3">
                         <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         Best Postgraduate Student in Business Information Systems Management in 2019/2020
                     </li>
-                    <li>
+                    <li class="mb-3">
                         <span class="fa-li"><i class="fas fa-trophy"></i></span>
                         Best student at Porto Executive Academy in 2019/2020
                     </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
+                </ul>
+                <div class="subheading mb-3">Certifications</div>
+                <ul class="fa-ul mb-0">
+                    <li class="mb-3">
+                        <span class="fa-li"><i class="fas fa-award"></i></span>
                         Certificate of Pedagogical Competencies (Certificate No. F704861/2020)
                     </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy"></i></span>
+                    <li class="mb-3">
+                        <span class="fa-li"><i class="fas fa-award"></i></span>
                         M101075A Microsoft Sharepoint 2010, Application Development, Microsoft Corporation
                     </li>
                 </ul>
             </div>
         </section>
+        <hr class="m-0" />
+        <!-- Repos-->
+        <section class="resume-section" id="repos">
+            <div class="resume-section-content">
+                <h2 class="mb-5"><i class="fab fa-github"></i> Github Repositories</h2>
+                <p>I actively benefit and contribute to the open source community, consuming and making available source code, documentation, translations and technical articles, always with the aim of increasing synergies, networking and continuous personal and professional improvement.</p>
+                <div class="subheading mb-3">Pinned repositories</div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                    <div class="flex-grow-1">
+                        <div><i class="fab fa-github"></i> <a href="https://github.com/ruialexrib/SAFTReader.PT">ruialexrib/SAFTReader.PT</a></div>
+                        <p>The SAFT READER software allows you to view, validate and analyze data from the SAF-T PT File, in the 1.04_01 format created from any program, relating to sales documents, tax tables, customers and products.</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                    <div class="flex-grow-1">
+                        <div><i class="fab fa-github"></i> <a href="https://github.com/ruialexrib/Programatica.Framework">ruialexrib/Programatica.Framework</a></div>
+                        <p>Development starter kit. This is a base lib framework starter kit that helps starting application development with a lot of features out of the box.</p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                    <div class="flex-grow-1">
+                        <div><i class="fab fa-github"></i> <a href="https://github.com/ruialexrib/Programatica.Framework">ruialexrib/pgsie</a></div>
+                        <p>Repository of articles and academic works produced within the scope of the Postgraduate course in Management of Business Information Systems, taught by the Porto Executive Academy.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
