--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                     <div class="flex-grow-1">
-                        <div><i class="fab fa-github"></i> <a href="https://github.com/ruialexrib/Programatica.Framework">ruialexrib/pgsie</a></div>
+                        <div><i class="fab fa-github"></i> <a href="https://github.com/ruialexrib/pgsie">ruialexrib/pgsie</a></div>
                         <p>Repository of articles and academic works produced within the scope of the Postgraduate course in Management of Business Information Systems, taught by the Porto Executive Academy.</p>
                     </div>
                 </div>
