--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <link href="./assets/fonts/Regular-RegularWEB.woff" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -41,7 +40,7 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h2 class="mb-5"><i class="fas fa-info-circle"></i> About me</h2>
-                <p class="lead mb-5">
+                <p class=" mb-5">
                     My name is Rui Ribeiro and Im a software developer that works with Microsoft technologies including ASP.NET Core / APIs / MVC / Winforms.<br />
                     Im prowd to work at Porto City Hall, as a member of the Information Systems Department, as a software developer and project manager.<br />
                     I am ambitious, self-motivated, resilient professional with more than 20 years of experience, with skills acquired in software development for the financial, accounting and management support areas.
