--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
       <li>
         <strong>Contabilista Certificado</strong><br>
         <span data-i18n="descricao_certificado_occ">
-          Membro efetivo da Ordem dos Contabilistas Certificados. N.º: 102501.
+          Membro efetivo da Ordem dos Contabilistas Certificados.
         </span>
       </li>
       <li>
         <strong>Formador Certificado</strong><br>
         <span data-i18n="descricao_certificado_ccp">
-          Emitido pelo IEFP – Instituto de Emprego e Formação Profissional. N.º: F704861/2020.
+          Emitido pelo IEFP – Instituto de Emprego e Formação Profissional.
         </span>
       </li>
     </ul>
